syntax = "proto3";

package ASC.Core.Common.Contracts;

message TransferRegion {
    string Name = 1;
    string BaseDomain = 2;
    bool IsCurrentRegion = 3;
}
